coins and ticker api added
