# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\Auth\AuthController;
+use App\Http\Controllers\Api\Coin\CoinController;
 
 /*
 |--------------------------------------------------------------------------
@@ -14,8 +15,11 @@ use App\Http\Controllers\Api\Auth\AuthController;
 |
 */
 
-Route::group(['middleware' => 'api', 'prefix' => 'v1'], function () {
+Route::group(['prefix' => 'v1'], function () {
     Route::post('login', [AuthController::class, 'login']);
     Route::post('register', [AuthController::class, 'register']);
-
+    Route::get('coins', [CoinController::class, 'index']);
+    Route::group(['middleware' => 'auth:api'], function () {
+        Route::get('ticker/{coinCode}', [CoinController::class, 'ticker']);
+    });
 });
